--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <script src="https://unpkg.com/element-ui/lib/index.js"></script>
   </head>
-  <body>
+  <body style="margin: 0">
     <noscript>
       <strong>We're sorry but charlie-gallery doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
