--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
     <!-- Element -->
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
   </head>
   <body style="margin: 0">
     <noscript>
