--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.3/photoswipe-ui-default.js"
             integrity="sha256-91Lzh0IJF7SzxZa01l+VErcZNJbeFFCUYDkmi47ZsN0=" crossorigin="anonymous"></script>
   </head>
-  <body style="margin: 0">
+  <body style="margin: 0; background: #00000014;">
     <noscript>
       <strong>We're sorry but charlie-gallery doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
